cmake_minimum_required(VERSION 3.5)
project(core)

set(CMAKE_CXX_STANDARD 11)

include_directories(. core)

add_library(core SHARED
        core/alignment/distortionCorrectTransform.h
        core/alignment/lensDistortionModelParameters.h
        core/alignment/anglePointsFunction.cpp
        core/alignment/angleFunction.cpp
        core/alignment/angleFunction.h
        core/alignment/anglePointsFunction.h
        core/alignment/radialCorrection.h
        core/alignment/radialCorrection.cpp
        core/alignment/selectableGeometryFeatures.cpp
        core/alignment/pointObservation.h
        core/alignment/camerasCalibration/camerasCalibrationFunc.h
        core/alignment/camerasCalibration/camerasCalibrationFunc.cpp
        core/alignment/lensDistortionModelParameters.cpp
        core/alignment/lmDistortionSolver.h
        core/alignment/pointObservation.cpp
        core/alignment/radialFunc.cpp
        core/alignment/radialFunc.h
        core/alignment/curvatureFunc.h
        core/alignment/distPointsFunction.cpp
        core/alignment/distPointsFunction.h
        core/alignment/curvatureFunc.cpp
        core/alignment/selectableGeometryFeatures.h
        core/alignment/lmDistortionSolver.cpp
        core/framesources/dummyVideoEncoderInterface.cpp
        core/framesources/dummyVideoEncoderInterface.h
        core/framesources/file/abstractFileCaptureSpinThread.h
        core/framesources/file/imageFileCaptureInterface.h
        core/framesources/file/abstractFileCapture.cpp
        core/framesources/file/imageFileCaptureInterface.cpp
        core/framesources/file/precCapture.cpp
        core/framesources/file/precCapture.h
        core/framesources/file/fileCapture.h
        core/framesources/file/abstractFileCapture.h
        core/framesources/file/fileCapture.cpp
        core/framesources/file/abstractFileCaptureSpinThread.cpp
        core/framesources/cameraControlParameters.h
        core/framesources/imageCaptureInterface.cpp
        core/framesources/cameraControlParameters.cpp
        core/framesources/imageCaptureInterface.h
        core/framesources/decoders/mjpegDecoderLazy.cpp
        core/framesources/decoders/mjpegDecoder.h
        core/framesources/decoders/mjpegDecoder.cpp
        core/framesources/decoders/aLowCodec.h
        core/framesources/decoders/decoupleYUYV.cpp
        core/framesources/decoders/mjpegDecoderLazy.h
        core/framesources/decoders/aLowCodec.cpp
        core/framesources/decoders/decoupleYUYV.h
        core/cammodel/imagerControl.h
        core/cammodel/imagerProperties.cpp
        core/cammodel/energyBuffer.h
        core/cammodel/energyBuffer.cpp
        core/cammodel/imagerProperties.h
        core/cammodel/imagerControl.cpp
        core/cammodel/sphericalCorrectionLUT.h
        core/cammodel/sphericalCorrectionLUT.cpp
        core/cammodel/cameraParameters.h
        core/cammodel/cameraParameters.cpp
        core/polynomial/polynomialSolver.cpp
        core/polynomial/polynomialSolver.h
        core/polynomial/polynomial.h
        core/polynomial/polynomial.cpp
        core/camerafixture/fixtureScene.h
        core/camerafixture/fixtureCamera.cpp
        core/camerafixture/cameraPrototype.h
        core/camerafixture/sceneFeaturePoint.h
        core/camerafixture/fixtureScenePart.cpp
        core/camerafixture/cameraFixture.cpp
        core/camerafixture/wildcardablePointerPair.cpp
        core/camerafixture/cameraFixture.h
        core/camerafixture/cameraPrototype.cpp
        core/camerafixture/fixtureScenePart.h
        core/camerafixture/fixtureCamera.h
        core/camerafixture/sceneFeaturePoint.cpp
        core/camerafixture/wildcardablePointerPair.h
        core/camerafixture/fixtureScene.cpp
        core/cameracalibration/calibrationLocation.h
        core/cameracalibration/projection/projectionFactory.cpp
        core/cameracalibration/projection/stereographicProjection.cpp
        core/cameracalibration/projection/omnidirectionalProjection.cpp
        core/cameracalibration/projection/equisolidAngleProjection.cpp
        core/cameracalibration/projection/stereographicProjection.h
        core/cameracalibration/projection/equidistantProjection.h
        core/cameracalibration/projection/pinholeCameraIntrinsics.h
        core/cameracalibration/projection/pinholeCameraIntrinsics.cpp
        core/cameracalibration/projection/projectionModels.h
        core/cameracalibration/projection/equidistantProjection.cpp
        core/cameracalibration/projection/equisolidAngleProjection.h
        core/cameracalibration/projection/projectionModels.cpp
        core/cameracalibration/projection/projectionFactory.h
        core/cameracalibration/projection/omnidirectionalProjection.h
        core/cameracalibration/calibrationLocation.cpp
        core/cameracalibration/ilFormat.cpp
        core/cameracalibration/cameraConstraints.h
        core/cameracalibration/ilFormat.h
        core/cameracalibration/cameraConstraints.cpp
        core/cameracalibration/cameraModel.cpp
        core/cameracalibration/flatPatternCalibrator.h
        core/cameracalibration/calibrationDrawHelpers.cpp
        core/cameracalibration/cameraModel.h
        core/cameracalibration/flatPatternCalibrator.cpp
        core/cameracalibration/calibrationDrawHelpers.h
        core/tbbwrapper/tbbWrapper.h
        core/serializer/serializable.cpp
        core/serializer/serializable.h
        core/filters/outputFilter.h
        core/filters/cannyFilter.h
        core/filters/filtersCollection.h
        core/filters/cannyFilter.cpp
        core/filters/backgroundFilter.cpp
        core/filters/outputFilter.cpp
        core/filters/bitSelectorFilter.h
        core/filters/thickeningBlock.cpp
        core/filters/txtFilter.cpp
        core/filters/inputFilter.h
        core/filters/gainOffsetFilter.h
        core/filters/operationFilter.cpp
        core/filters/abstractFilter.cpp
        core/filters/sobelFilter.h
        core/filters/thickeningBlock.h
        core/filters/operationFilter.h
        core/filters/bitSelectorFilter.cpp
        core/filters/filtersCollection.cpp
        core/filters/inputFilter.cpp
        core/filters/txtFilter.h
        core/filters/blocks/compoundFilter.h
        core/filters/blocks/newStyleBlock.h
        core/filters/blocks/filterGraph.h
        core/filters/blocks/filterBlock.cpp
        core/filters/blocks/compoundFilter.cpp
        core/filters/blocks/newStyleBlock.cpp
        core/filters/blocks/filterBlock.h
        core/filters/blocks/pins.h
        core/filters/blocks/filterGraph.cpp
        core/filters/blocks/pins.cpp
        core/filters/binarizeBlock.cpp
        core/filters/abstractFilter.h
        core/filters/backgroundFilter.h
        core/filters/sobelFilter.cpp
        core/filters/maskFilterBlock.h
        core/filters/maskFilterBlock.cpp
        core/filters/binarizeBlock.h
        core/filters/gainOffsetFilter.cpp
        core/features2d/descriptorExtractorProvider.cpp
        core/features2d/featureMatchingPipeline.h
        core/features2d/bufferReaderProvider.h
        core/features2d/descriptorMatcherProvider.cpp
        core/features2d/imageMatches.h
        core/features2d/descriptorExtractorProvider.h
        core/features2d/bufferReaderProvider.cpp
        core/features2d/featureDetectorProvider.cpp
        core/features2d/vsfmIo.cpp
        core/features2d/vsfmIo.h
        core/features2d/matchingPlan.h
        core/features2d/imageMatches.cpp
        core/features2d/featureDetectorProvider.h
        core/features2d/featureMatchingPipeline.cpp
        core/features2d/imageKeyPoints.h
        core/features2d/descriptorMatcherProvider.h
        core/features2d/matchingPlan.cpp
        core/features2d/algoBase.h
        core/features2d/imageKeyPoints.cpp
        core/buffers/voxels/slicedSpace.cpp
        core/buffers/voxels/voxelBuffer.h
        core/buffers/voxels/slicedSpace.h
        core/buffers/displacementBuffer.cpp
        core/buffers/displacementBuffer.h
        core/buffers/disparityBuffer.h
        core/buffers/abstractKernel.h
        core/buffers/g12Buffer3d.cpp
        core/buffers/transformationCache.h
        core/buffers/kernels/arithmetic.h
        core/buffers/kernels/copyKernel.h
        core/buffers/kernels/fastkernel/baseAlgebra.h
        core/buffers/kernels/fastkernel/baseKernel.h
        core/buffers/kernels/fastkernel/scalarAlgebra.h
        core/buffers/kernels/fastkernel/vectorTraits.h
        core/buffers/kernels/fastkernel/fastKernel.h
        core/buffers/kernels/fastkernel/readers.h
        core/buffers/kernels/fastkernel/vectorAlgebra.h
        core/buffers/kernels/threshold.h
        core/buffers/kernels/sobel.h
        core/buffers/kernels/fastconverter/fastConverter.h
        core/buffers/kernels/blurProcessor.h
        core/buffers/kernels/sobel.cpp
        core/buffers/kernels/blurProcessor.cpp
        core/buffers/kernels/fastKernelDoc.h
        core/buffers/kernels/logicKernels.h
        core/buffers/kernels/logicKernels.cpp
        core/buffers/kernels/gaussian.cpp
        core/buffers/kernels/spatialGradient.h
        core/buffers/kernels/genericFastKernel.h
        core/buffers/kernels/spatialGradient.cpp
        core/buffers/kernels/threshold.cpp
        core/buffers/kernels/gaussian.h
        core/buffers/convolver/convolver.cpp
        core/buffers/convolver/convolver.h
        core/buffers/commonMappers.h
        core/buffers/buffer3d.h
        core/buffers/remapBuffer.cpp
        core/buffers/disparityBuffer.cpp
        core/buffers/integralBuffer.h
        core/buffers/interpolator.h
        core/buffers/g8Buffer.cpp
        core/buffers/bufferFactory.h
        core/buffers/deformMap.cpp
        core/buffers/runtimeTypeBuffer.h
        core/buffers/bufferFactory.cpp
        core/buffers/flow/element6D.h
        core/buffers/flow/floatFlowBuffer.cpp
        core/buffers/flow/sixDBuffer.cpp
        core/buffers/flow/element6D.cpp
        core/buffers/flow/floatFlowBuffer.h
        core/buffers/flow/flowBuffer.h
        core/buffers/flow/sixDBuffer.h
        core/buffers/flow/depthBuffer.h
        core/buffers/flow/flowVector.h
        core/buffers/flow/flowBuffer.cpp
        core/buffers/flow/punchedBufferOperations.h
        core/buffers/flow/depthBuffer.cpp
        core/buffers/derivativeBuffer.h
        core/buffers/abstractContiniousBuffer.h
        core/buffers/booleanBuffer.cpp
        core/buffers/g12Buffer.h
        core/buffers/buffer3d.cpp
        core/buffers/transformationCache.cpp
        core/buffers/fixeddisp/bilinearMapPoint.h
        core/buffers/fixeddisp/fixedPointRemapper.h
        core/buffers/fixeddisp/fixedPointBlMapper.h
        core/buffers/mipmapPyramid.cpp
        core/buffers/nonMaximalSuperssor.h
        core/buffers/deformMap.h
        core/buffers/abstractBuffer.h
        core/buffers/derivativeBuffer.cpp
        core/buffers/focusEstimator.cpp
        core/buffers/memory/memoryBlock.h
        core/buffers/memory/alignedMemoryBlock.h
        core/buffers/memory/memoryBlock.cpp
        core/buffers/booleanBuffer.h
        core/buffers/g12Buffer3d.h
        core/buffers/rgb24/wuRasterizer.h
        core/buffers/rgb24/rgbTBuffer.h
        core/buffers/rgb24/hardcodeFont.h
        core/buffers/rgb24/lineSpan.cpp
        core/buffers/rgb24/rgbColor.cpp
        core/buffers/rgb24/rgb24Buffer.h
        core/buffers/rgb24/wuRasterizer.cpp
        core/buffers/rgb24/abstractPainter.h
        core/buffers/rgb24/lineSpan.h
        core/buffers/rgb24/bresenhamRasterizer.cpp
        core/buffers/rgb24/hersheyVectorFont.cpp
        core/buffers/rgb24/bezierRasterizer.cpp
        core/buffers/rgb24/bezierRasterizer.h
        core/buffers/rgb24/rgb24Buffer.cpp
        core/buffers/rgb24/abstractPainter.cpp
        core/buffers/rgb24/rgbColor.h
        core/buffers/rgb24/hersheyVectorFont.h
        core/buffers/rgb24/bresenhamRasterizer.h
        core/buffers/rgb24/hardcodeFont.cpp
        core/buffers/rgb24/rgbTColor.h
        core/buffers/histogram/histogram.cpp
        core/buffers/histogram/histogram.h
        core/buffers/runtimeTypeBuffer.cpp
        core/buffers/g8Buffer.h
        core/buffers/abstractBuffer.cpp
        core/buffers/mipmapPyramid.h
        core/buffers/converters/labConverter.h
        core/buffers/converters/errorMetrics.h
        core/buffers/converters/debayer.cpp
        core/buffers/converters/colorConverters.cpp
        core/buffers/converters/debayerTool.cpp
        core/buffers/converters/debayer.h
        core/buffers/converters/colorConverters.h
        core/buffers/converters/errorMetrics.cpp
        core/buffers/converters/debayerTool.h
        core/buffers/focusEstimator.h
        core/buffers/morphological/morphological.cpp
        core/buffers/morphological/morphological.h
        core/buffers/g12Buffer.cpp
        core/buffers/commonMappers.cpp
        core/buffers/remapBuffer.h
        core/buffers/abstractBufferParams.h
        core/buffers/nonMaximalSuperssor.cpp
        core/patterndetection/patternDetector.h
        core/patterndetection/circlePatternGenerator.h
        core/patterndetection/boardAligner.cpp
        core/patterndetection/circlePatternGenerator.cpp
        core/patterndetection/boardAligner.h
        core/patterndetection/patternDetector.cpp
        core/stats/calculationStats.h
        core/stats/calculationStats.cpp
        core/utils/preciseTimer.cpp
        core/utils/statusTracker.h
        core/utils/countedPtr.h
        core/utils/stdint_win.h
        core/utils/propertyList.h
        core/utils/statusTracker.cpp
        core/utils/log.h
        core/utils/sse_trace.h
        core/utils/utils.cpp
        core/utils/utils.h
        core/utils/propertyList.cpp
        core/utils/log.cpp
        core/utils/visitors/propertyListVisitor.cpp
        core/utils/visitors/propertyListVisitor.h
        core/utils/visitors/basePathVisitor.h
        core/utils/visitors/basePathVisitor.cpp
        core/utils/global.h
        core/utils/typesafeBitmaskEnums.h
        core/utils/atomicOps.h
        core/utils/preciseTimer.h
        core/assignment/assignmentOptimal.h
        core/assignment/assignmentOptimal.cpp
        core/reflection/jsonPrinter.h
        core/reflection/usageVisitor.h
        core/reflection/binaryReader.h
        core/reflection/defaultSetter.h
        core/reflection/dynamicObject.h
        core/reflection/defaultSetter.cpp
        core/reflection/usageVisitor.cpp
        core/reflection/commandLineSetter.cpp
        core/reflection/reflection.h
        core/reflection/extendedVisitor.h
        core/reflection/reflection.cpp
        core/reflection/stringPrinterVisitor.h
        core/reflection/dynamicObject.cpp
        core/reflection/deserializerVisitor.h
        core/reflection/binaryReader.cpp
        core/reflection/jsonPrinter.cpp
        core/reflection/extendedVisitor.cpp
        core/reflection/commandLineSetter.h
        core/reflection/binaryWriter.h
        core/reflection/binaryWriter.cpp
        core/reflection/serializerVisitor.cpp
        core/reflection/commandLineGetter.h
        core/reflection/deserializerVisitor.cpp
        core/reflection/printerVisitor.h
        core/reflection/commandLineGetter.cpp
        core/reflection/advanced/advancedBinaryWriter.h
        core/reflection/advanced/advancedBinaryReader.h
        core/reflection/advanced/advancedBinaryReader.cpp
        core/reflection/advanced/advancedBinaryWriter.cpp
        core/reflection/stringPrinterVisitor.cpp
        core/reflection/printerVisitor.cpp
        core/reflection/serializerVisitor.h
        core/meta/floatJIT.cpp
        core/meta/packedDerivative.cpp
        core/meta/astOptimize.cpp
        core/meta/astNode.cpp
        core/meta/floatJIT.h
        core/meta/astNode.h
        core/meta/astOptimize.h
        core/meta/packedDerivative.h
        core/iterative/minresQLP.cpp
        core/iterative/pcg.cpp
        core/iterative/minresQLP.h
        core/iterative/pcg.h
        core/meanshift/meanShiftWindow.h
        core/meanshift/meanShiftCalculator.cpp
        core/meanshift/meanShiftCalculator.h
        core/meanshift/meanShiftWindow.cpp
        core/meanshift/abstractMeanShiftKernel.h
        core/automotive/flowVectorInformation.cpp
        core/automotive/FCostFunction.cpp
        core/automotive/flowVectorInformation.h
        core/automotive/simulation/testSceneSimulator.cpp
        core/automotive/simulation/testSceneSimulator.h
        core/automotive/FCostFunction.h
        core/boosting/adaBoost.cpp
        core/boosting/adaBoost.h
        core/boosting/vjPattern.cpp
        core/boosting/detectedObject.h
        core/boosting/cascadeClassifier.cpp
        core/boosting/vjPattern.h
        core/boosting/cascadeClassifier.h
        core/boosting/detectedObject.cpp
        core/edgedetector/cannyDetector.cpp
        core/edgedetector/cannyDetector.h
        core/xml/generated/essentialDerivative2.cpp
        core/xml/generated/interpolationType.h
        core/xml/generated/focusEstimationResult.h
        core/xml/generated/debayerParameters.cpp
        core/xml/generated/chessBoardCornerDetectorParamsBase.cpp
        core/xml/generated/sceneStereoAlignerBlockBase.h
        core/xml/generated/inputFilterParameters.cpp
        core/xml/generated/axisAlignedBoxParameters.h
        core/xml/generated/lensDistortionModelParametersBase.cpp
        core/xml/generated/checkerboardDetectionParameters.cpp
        core/xml/generated/lineDistortionEstimatorParameters.h
        core/xml/generated/euclidianMoveParameters.h
        core/xml/generated/iterativeEstimateParameters.h
        core/xml/generated/chessBoardAssemblerParamsBase.h
        core/xml/generated/stereoAlignParameters.cpp
        core/xml/generated/projectionBaseParameters.cpp
        core/xml/generated/debayerParameters.h
        core/xml/generated/omnidirectionalBaseParameters.h
        core/xml/generated/focusEstimationParameters.cpp
        core/xml/generated/binarizeParameters.h
        core/xml/generated/drawGCodeParameters.cpp
        core/xml/generated/outputType.h
        core/xml/generated/checkerboardDetectionParameters.h
        core/xml/generated/openCVFilterParameters.cpp
        core/xml/generated/bitcodeBoardParamsBase.cpp
        core/xml/generated/calibrationDrawHelpersParameters.cpp
        core/xml/generated/checkerboardDetectionAlgorithm.h
        core/xml/generated/focusEstimationParameters.h
        core/xml/generated/outputFilterParameters.h
        core/xml/generated/homorgaphyReconstructorBlockBase.h
        core/xml/generated/ransacParameters.h
        core/xml/generated/lensDistortionModelParametersBase.h
        core/xml/generated/makePreciseParameters.cpp
        core/xml/generated/bitSelectorParameters.cpp
        core/xml/generated/projectionType.h
        core/xml/generated/backgroundFilterParameters.cpp
        core/xml/generated/cannyParameters.cpp
        core/xml/generated/thickeningParameters.h
        core/xml/generated/essentialDerivative1.cpp
        core/xml/generated/sobelMixingType.h
        core/xml/generated/cannyParameters.h
        core/xml/generated/debayerMethod.h
        core/xml/generated/sceneDrawBackendType.h
        core/xml/generated/pinholeCameraIntrinsicsBaseParameters.cpp
        core/xml/generated/distortionApplicationParameters.h
        core/xml/generated/chessBoardCornerDetectorParamsBase.h
        core/xml/generated/pinholeCameraIntrinsicsBaseParameters.h
        core/xml/generated/extrinsicsPlacerParameters.cpp
        core/xml/generated/inputFilterParameters.h
        core/xml/generated/lineDistortionEstimatorCost.h
        core/xml/generated/distortionResizePolicy.h
        core/xml/generated/makePreciseParameters.h
        core/xml/generated/bitSelectorParameters.h
        core/xml/generated/homorgaphyReconstructorBlockBase.cpp
        core/xml/generated/bitcodeBoardOrientation.h
        core/xml/generated/operationParameters.h
        core/xml/generated/adderSubstractorParametersBase.cpp
        core/xml/generated/headSearchParameters.cpp
        core/xml/generated/iterativeEstimateParameters.cpp
        core/xml/generated/homographyAlgorithm.h
        core/xml/generated/openCVFilterParameters.h
        core/xml/generated/extrinsicsPlacerParameters.h
        core/xml/generated/bitcodeBoardParamsBase.h
        core/xml/generated/rgbColorParameters.h
        core/xml/generated/vector3dParameters.h
        core/xml/generated/focusEstimationResult.cpp
        core/xml/generated/imageChannel.h
        core/xml/generated/vector3dParameters.cpp
        core/xml/generated/makePreciseAlgorithm.h
        core/xml/generated/sobelParameters.h
        core/xml/generated/backgroundFilterParameters.h
        core/xml/generated/stereoAlignParameters.h
        core/xml/generated/gCodeColoringSheme.h
        core/xml/generated/sceneStereoAlignerBlockBase.cpp
        core/xml/generated/operation.h
        core/xml/generated/chessBoardAssemblerParamsBase.cpp
        core/xml/generated/drawGCodeParameters.h
        core/xml/generated/axisAlignedBoxParameters.cpp
        core/xml/generated/headSearchParameters.h
        core/xml/generated/calibrationDrawHelpersParameters.h
        core/xml/generated/projectionBaseParameters.h
        core/xml/generated/rgbColorParameters.cpp
        core/xml/generated/omnidirectionalBaseParameters.cpp
        core/xml/generated/gainOffsetParameters.cpp
        core/xml/generated/openCVBinaryFilterType.h
        core/xml/generated/thickeningParameters.cpp
        core/xml/generated/sobelParameters.cpp
        core/xml/generated/essentialDerivative.cpp
        core/xml/generated/gainOffsetParameters.h
        core/xml/generated/adderSubstractorParametersBase.h
        core/xml/generated/preciseInterpolationType.h
        core/xml/generated/binarizeParameters.cpp
        core/xml/generated/vector2dParameters.h
        core/xml/generated/clusteringDirectionType.h
        core/xml/generated/operationParameters.cpp
        core/xml/generated/outputFilterParameters.cpp
        core/xml/generated/inputType.h
        core/xml/generated/vector2dParameters.cpp
        core/xml/generated/euclidianMoveParameters.cpp
        core/xml/generated/maskingParameters.h
        core/xml/generated/distortionApplicationParameters.cpp
        core/xml/generated/lineDistortionEstimatorParameters.cpp
        core/xml/generated/maskingParameters.cpp
        core/xml/generated/ransacParameters.cpp
#        core/clegacy/cornermarker.h
#        core/clegacy/align_nonlinear.h
#        core/clegacy/sgm.h
#        core/clegacy/math/linlse.h
#        core/clegacy/math/levenmarq.cpp
#        core/clegacy/math/matrix.h
#        core/clegacy/math/geometry.h
#        core/clegacy/math/algebra.h
#        core/clegacy/math/levmar.h
#        core/clegacy/math/levenmarq.h
        core/tinyxml/tinyxml2.cpp
        core/tinyxml/tinyxml2.h
        core/fileformats/bmpLoader.cpp
        core/fileformats/pltLoader.cpp
        core/fileformats/gcodeLoader.cpp
        core/fileformats/ppmLoader.cpp
        core/fileformats/bmpLoader.h
        core/fileformats/xyzListLoader.cpp
        core/fileformats/meshLoader.h
        core/fileformats/metamap.h
        core/fileformats/openCVDataLoader.h
        core/fileformats/objLoader.h
        core/fileformats/ppmLoader.h
        core/fileformats/bufferLoader.h
        core/fileformats/objLoader.cpp
        core/fileformats/rawLoader.h
        core/fileformats/rawLoader.cpp
        core/fileformats/gcodeLoader.h
        core/fileformats/openCVDataLoader.cpp
        core/fileformats/stlLoader.cpp
        core/fileformats/pltLoader.h
        core/fileformats/xyzListLoader.h
        core/fileformats/plyLoader.cpp
        core/fileformats/plyLoader.h
        core/fileformats/stlLoader.h
        core/fileformats/meshLoader.cpp
        core/fileformats/bufferLoader.cpp
        core/segmentation/segmentator.cpp
        core/segmentation/tileGrid.h
        core/segmentation/tileGrid.cpp
        core/segmentation/segmentator.h
        core/math/gradientDescent.h
        core/math/avx/int32x8.h
        core/math/avx/int32x16v.h
        core/math/avx/int16x16.h
        core/math/avx/avxInteger.h
        core/math/avx/float32x8.h
        core/math/avx/int64x4.h
        core/math/wisdom.h
        core/math/quaternion.cpp
        core/math/eulerAngles.h
        core/math/fixed/fixedPoint24p8.h
        core/math/fixed/fixedPoint24p8.cpp
        core/math/fftw/fftwWrapper.h
        core/math/fftw/fftwWrapper.cpp
        core/math/tangentSpace.h
        core/math/helperFunctions.cpp
        core/math/sparseMatrix.cpp
        core/math/sse/doublex2.h
        core/math/sse/int64x2.h
        core/math/sse/int32x4.h
        core/math/sse/int16x8.h
        core/math/sse/doublex8.h
        core/math/sse/float32x4.h
        core/math/sse/doublexT4.h
        core/math/sse/uInt16x8.h
        core/math/sse/uInt8x16.h
        core/math/sse/intBase16x8.h
        core/math/sse/sseMath.h
        core/math/sse/sseWrapper.h
        core/math/sse/int8x16.h
        core/math/sse/doublex4.h
        core/math/sse/sseInteger.h
        core/math/sse/intBase8x16.h
        core/math/sse/int32x8v.h
        core/math/sse/floatT8.h
        core/math/sse/sseWrapper.cpp
        core/math/sse/float32x8.h
        core/math/quaternion.h
        core/math/vector/vectorOperations.h
        core/math/vector/vector2d.cpp
        core/math/vector/vector3d.h
        core/math/vector/vector.h
        core/math/vector/vector4d.h
        core/math/vector/vector2d.h
        core/math/vector/fixedArray.h
        core/math/vector/fixedVector.h
        core/math/puzzleBlock.h
        core/math/mathUtils.h
        core/math/matrix/diagonalMatrix.cpp
        core/math/matrix/similarityReconstructor.h
        core/math/matrix/matrix22.cpp
        core/math/matrix/matrix22.h
        core/math/matrix/diagonalMatrix.h
        core/math/matrix/matrix.h
        core/math/matrix/homographyReconstructor.cpp
        core/math/matrix/matrixOperations.h
        core/math/matrix/matrix33.cpp
        core/math/matrix/matrix33.h
        core/math/matrix/homographyReconstructor.h
        core/math/matrix/matrix.cpp
        core/math/matrix/blasReplacement.h
        core/math/matrix/matrix44.cpp
        core/math/matrix/matrix44.h
        core/math/matrix/similarityReconstructor.cpp
        core/math/sparseMatrix.h
        core/math/lutAlgebra.h
        core/math/helperFunctions.h
        core/math/tangentSpace.cpp
        core/math/affine.h
        core/math/wisdom.cpp
        core/math/projectiveTransform.cpp
        core/math/lutAlgebra.cpp
        core/math/generic/genericMath.cpp
        core/math/generic/genericMath.h
        core/math/neon/int32x8.h
        core/math/neon/int64x2.h
        core/math/neon/int32x4.h
        core/math/neon/int16x8.h
        core/math/neon/uInt32x4.h
        core/math/neon/float32x4.h
        core/math/neon/uInt16x8.h
        core/math/neon/neonWrapper.cpp
        core/math/neon/neonMath.h
        core/math/neon/neonWrapper.h
        core/math/neon/int32x8v.h
        core/math/gradientDescent.cpp
        core/math/projectiveTransform.h
        core/math/levenmarq.h
        core/math/affine.cpp
        core/geometry/ellipticalApproximation.h
        core/geometry/triangulation.cpp
        core/geometry/line.h
        core/geometry/ellipseFit.h
        core/geometry/halfspaceIntersector.cpp
        core/geometry/halfspaceIntersector.h
        core/geometry/polygonPointIterator.h
        core/geometry/gentryState.cpp
        core/geometry/polygons.cpp
        core/geometry/mesh3DDecorated.h
        core/geometry/twoViewOptimalTriangulation.cpp
        core/geometry/plane.cpp
        core/geometry/rectangle.h
        core/geometry/triangulation.h
        core/geometry/mesh3d.cpp
        core/geometry/plane3dFit.h
        core/geometry/polygons.h
        core/geometry/plane.h
        core/geometry/kdtree.h
        core/geometry/convexPolyhedron.h
        core/geometry/polylinemesh.h
        core/geometry/twoViewOptimalTriangulation.h
        core/geometry/polyLine.h
        core/geometry/axisAlignedBox.cpp
        core/geometry/gentryState.h
        core/geometry/plane3dFit.cpp
        core/geometry/convexHull.h
        core/geometry/renderer/attributedTriangleSpanIterator.h
        core/geometry/renderer/simpleRenderer.h
        core/geometry/renderer/geometryIterator.h
        core/geometry/renderer/simpleRenderer.cpp
        core/geometry/renderer/attributedTriangleSpanIterator.cpp
        core/geometry/ellipseFit.cpp
        core/geometry/axisAlignedBox.h
        core/geometry/ellipse.h
        core/geometry/pointCloud.h
        core/geometry/conic.h
        core/geometry/rectangle.cpp
        core/geometry/orientedBox.cpp
        core/geometry/convexPolyhedron.cpp
        core/geometry/convexQuickHull.cpp
        core/geometry/pointCloud.cpp
        core/geometry/convexHull.cpp
        core/geometry/vptree.h
        core/geometry/Projection.h
        core/geometry/projection.cpp
        core/geometry/mesh3d.h
        core/geometry/polylinemesh.cpp
        core/geometry/polyLine.cpp
        core/geometry/meshClicker.h
        core/geometry/polygonPointIterator.cpp
        core/geometry/convexQuickHull.h
        core/geometry/ellipticalApproximation.cpp
        core/geometry/conic.cpp
        core/geometry/meshClicker.cpp
        core/geometry/mesh3DDecorated.cpp
        core/geometry/orientedBox.h
        core/geometry/raytrace/raytraceableNodeWrapper.cpp
        core/geometry/raytrace/sdfRenderableObjects.h
        core/geometry/raytrace/raytraceableNodeWrapper.h
        core/geometry/raytrace/perlinNoise.h
        core/geometry/raytrace/perlinNoise.cpp
        core/geometry/raytrace/sdfRenderable.h
        core/geometry/raytrace/materialExamples.cpp
        core/geometry/raytrace/materialExamples.h
        core/geometry/raytrace/sdfRenderableObjects.cpp
        core/geometry/raytrace/raytraceObjects.h
        core/geometry/raytrace/raytraceRenderer.cpp
        core/geometry/raytrace/sdfRenderable.cpp
        core/geometry/raytrace/raytraceObjects.cpp
        core/geometry/raytrace/raytraceRenderer.h
        core/geometry/raytrace/bspTree.h
        core/geometry/ellipse.cpp
        core/function/function.cpp
        core/function/function.h
        core/kltflow/kltGenerator.cpp
        core/kltflow/kltGenerator.h
        core/kalman/uduDecomposed.h
        core/kalman/uduDecomposed.cpp
        core/kalman/cholesky.cpp
        core/kalman/cooSparseMatrix.cpp
        core/kalman/cooSparseMatrix.h
        core/kalman/upperUnitaryMatrix.cpp
        core/kalman/cholesky.h
        core/kalman/classicKalman.h
        core/kalman/classicKalman.cpp
        core/kalman/upperUnitaryMatrix.h
        core/filesystem/tempFolder.h
        core/filesystem/folderScanner.cpp
        core/filesystem/tempFolder.cpp
        core/filesystem/folderScanner.h
        core/stereointerface/processor6D.cpp
        core/stereointerface/processor6D.h
        core/rectification/rectificationDoc.h
        core/rectification/stereoAligner.h
        core/rectification/stereoAligner.cpp
        core/rectification/multicameraTriangulator.cpp
        core/rectification/p5pNumericPart.h
        core/rectification/ransacEstimator.h
        core/rectification/ransac.h
        core/rectification/sceneStereoAlignerBlock.cpp
        core/rectification/essentialMatrix.h
        core/rectification/essentialMatrix.cpp
        core/rectification/essentialEstimator.h
        core/rectification/iterativeEstimator.h
        core/rectification/iterativeEstimator.cpp
        core/rectification/triangulator.h
        core/rectification/correspondenceList.cpp
        core/rectification/sceneStereoAlignerBlock.h
        core/rectification/essentialEstimator.cpp
        core/rectification/correspondenceList.h
        core/rectification/triangulator.cpp
        core/rectification/p5pPolynomialPart.h
        core/rectification/ransacEstimator.cpp
        core/rectification/multicameraTriangulator.h
        core/clustering3d/cloudCluster.cpp
        core/clustering3d/swarmPoint.h
        core/clustering3d/clustering3d.cpp
        core/clustering3d/cloud.cpp
        core/clustering3d/swarmPoint.cpp
        core/clustering3d/cloud.h
        core/clustering3d/clustering3d.h
        core/clustering3d/cloudCluster.h
        core/delaunay/delaunay.h
        core/delaunay/delaunay.cpp
        )

target_link_libraries(${PROJECT_NAME} fftw3)
target_link_libraries(${PROJECT_NAME} stdc++fs)
target_link_libraries(${PROJECT_NAME} pthread)
